fix: keyboard changes layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 body {
   width: 100%;
-  height: 100dvh;
+  height: 100vh;
   overflow: hidden;
   background-color: var(--bg-color-navbar) !important;
 }
